fix modal layout/spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -105,6 +105,9 @@ option {
 
 .modal-content p {
   padding: 1rem;
+  gap: 0.5rem;
+  display: flex;
+  flex-direction: column;
 }
 
 #closeAddProjModal,
